--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -369,11 +369,11 @@ components:
       layout_properties: {row: YQKNAU, width_xs: 3, col_xs: 0, width: 199.25}
       event_bindings: {click: new_escalation}
     - type: CheckBox
-      properties: {role: switch-rounded, align: right, tooltip: '', border: '', enabled: true,
-        foreground: 'theme:Filter Font', allow_indeterminate: false, visible: true,
-        text: '', font_size: 20, font: '', spacing_above: none, spacing_below: small,
+      properties: {role: switch-rounded, align: right, tooltip: This will add resolved escalations to the dashboard,
+        border: '', enabled: true, foreground: 'theme:Filter Font', allow_indeterminate: false,
+        visible: true, text: '', font_size: 20, font: '', spacing_above: none, spacing_below: small,
         italic: false, background: '', bold: false, checked: false, underline: false}
-      layout_properties: {row: YQKNAU, width_xs: 1, col_xs: 3, width: 58.4062}
+      layout_properties: {row: YQKNAU, width_xs: 1, col_xs: 3, width: 30.3333}
       event_bindings: {change: filter_change}
       name: resolved_checkbox
     - type: Label
