--- a/client_code/Modal_wide/form_template.yaml
+++ b/client_code/Modal_wide/form_template.yaml
@@ -2,7 +2,7 @@ container: {type: ColumnPanel}
 components:
 - type: ColumnPanel
   properties: {role: border-bottom, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"QFIVOG":25,"YWNEHA":40,"BCTDMD":10,"OZMXOW":10}',
+    wrap_on: mobile, col_spacing: small, spacing_above: small, col_widths: '{"QFIVOG":20,"YWNEHA":16,"WIVQCM":19,"YQSTKN":23}',
     spacing_below: small, background: ''}
   name: column_panel_1
   layout_properties:
@@ -152,11 +152,11 @@ components:
       - {property: text, code: 'self.item[''mobile_number'']'}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: 'Date Delivered :', font_size: 14, font: '',
+          Font', visible: true, text: 'Date Completed :', font_size: 14, font: '',
         spacing_above: none, icon_align: left, spacing_below: none, italic: false,
         background: '', bold: false, underline: false, icon: ''}
       name: label_10
-      layout_properties: {row: FBQPYV, width_xs: 2, col_xs: 4, width: 115.656}
+      layout_properties: {row: FBQPYV, width_xs: 2, col_xs: 4, width: 99.9844}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
         visible: true, text: '', font_size: 14, font: '', spacing_above: none, icon_align: left,
@@ -191,20 +191,22 @@ components:
     name: label_1
     layout_properties: {grid_position: 'KTJXJG,YWNEHA'}
   - type: Button
-    properties: {role: null, align: right, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: 'fa:chevron-left'}
-    name: button_2
-    layout_properties: {grid_position: 'KTJXJG,BCTDMD'}
-  - type: Button
     properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
       foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: 'fa:chevron-right'}
     name: button_1
-    layout_properties: {grid_position: 'KTJXJG,OZMXOW'}
+    layout_properties: {grid_position: 'KTJXJG,WIVQCM AQATXG,YGKLBS', x: 298.25, y: -6,
+      width: 73.3594}
     event_bindings: {click: next_click}
+  - type: Button
+    properties: {role: null, align: right, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: 'fa:chevron-left'}
+    name: button_2
+    layout_properties: {grid_position: 'KTJXJG,WIVQCM AQATXG,PCRSIW', x: 185.3125,
+      y: -6, width: 64.625}
   - type: ColumnPanel
     properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
       wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"RDQOEF":55,"SSSIQM":25}',
@@ -299,6 +301,34 @@ components:
     layout_properties: {grid_position: 'RYDJVG,QFIVOG'}
     data_bindings:
     - {property: text, code: '"Comment History"'}
+  - type: FlowPanel
+    properties: {}
+    name: flow_panel_1
+    layout_properties: {grid_position: 'RYDJVG,YQSTKN'}
+    components:
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Error',
+        visible: false, text: Please add a comment, font_size: 12, font: '', spacing_above: none,
+        icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: e_comment
+      layout_properties: {x: 202.515625, y: 0, width: 248.438, grid_position: 'RYDJVG,BMQSIH'}
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Error',
+        visible: false, text: You must assign this comment, font_size: 12, font: '',
+        spacing_above: none, icon_align: left, spacing_below: none, italic: false,
+        background: '', bold: false, underline: false, icon: ''}
+      name: e_assign
+      layout_properties: {x: 202.515625, y: 17.859399999999994, width: 222.516, grid_position: 'KTJXJG,WIVQCM
+          AQATXG,RGRDNE'}
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Error',
+        visible: false, text: Please select a status, font_size: 12, font: '', spacing_above: none,
+        icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: e_status
+      layout_properties: {x: 202.515625, y: 1.859375, width: 161.719, grid_position: 'KTJXJG,WIVQCM
+          LZYGQP,UDZGSE'}
   - type: GridPanel
     properties: {spacing_above: small, spacing_below: small, background: '', foreground: '',
       border: '', visible: true, role: border_bottom, tooltip: ''}
