--- a/client_code/Reporting/form_template.yaml
+++ b/client_code/Reporting/form_template.yaml
@@ -18,23 +18,25 @@ components:
     - type: Button
       properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
         foreground: '', visible: true, text: back, font_size: null, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        icon_align: left, spacing_below: large, italic: false, background: '', bold: false,
         underline: false, icon: 'fa:angle-left'}
       name: Dashboard
       layout_properties: {grid_position: 'HNIQTX,LXRVGT', x: 0, y: -10, width: 96}
       event_bindings: {click: Dashboard_click}
   - type: Plot
-    properties: {spacing_above: small, spacing_below: small, height: '450', visible: true,
+    properties: {spacing_above: small, spacing_below: small, height: '600', visible: true,
       tooltip: '', interactive: true}
     name: plot_1
     layout_properties: {grid_position: 'LSDZFT,UVTSCZ'}
     event_bindings: {}
   - type: Plot
-    properties: {}
+    properties: {spacing_above: small, spacing_below: small, height: '600', visible: true,
+      tooltip: '', interactive: true}
     name: plot_2
     layout_properties: {grid_position: 'DNSKBA,YZESWF'}
   - type: Plot
-    properties: {}
+    properties: {spacing_above: small, spacing_below: small, height: '600', visible: true,
+      tooltip: '', interactive: true}
     name: plot_3
     layout_properties: {grid_position: 'WSYCPI,ACITTJ'}
 - type: FlowPanel
