--- a/client_code/Reporting/form_template.yaml
+++ b/client_code/Reporting/form_template.yaml
@@ -24,13 +24,13 @@ components:
       layout_properties: {grid_position: 'HNIQTX,LXRVGT', x: 0, y: -10, width: 96}
       event_bindings: {click: Dashboard_click}
   - type: Plot
-    properties: {spacing_above: small, spacing_below: small, height: '600', visible: true,
+    properties: {spacing_above: small, spacing_below: small, height: '600', visible: false,
       tooltip: '', interactive: true}
     name: plot_1
     layout_properties: {grid_position: 'LSDZFT,UVTSCZ'}
     event_bindings: {}
   - type: Plot
-    properties: {spacing_above: small, spacing_below: small, height: '600', visible: true,
+    properties: {spacing_above: small, spacing_below: small, height: '600', visible: false,
       tooltip: '', interactive: true}
     name: plot_2
     layout_properties: {grid_position: 'DNSKBA,YZESWF'}
@@ -39,6 +39,7 @@ components:
       tooltip: '', interactive: true}
     name: plot_3
     layout_properties: {grid_position: 'WSYCPI,ACITTJ'}
+    event_bindings: {show: call_js}
   - type: Plot
     properties: {}
     name: plot_4
