--- a/client_code/Reporting/form_template.yaml
+++ b/client_code/Reporting/form_template.yaml
@@ -24,13 +24,17 @@ components:
       layout_properties: {grid_position: 'HNIQTX,LXRVGT', x: 0, y: -10, width: 96}
       event_bindings: {click: Dashboard_click}
   - type: Plot
-    properties: {spacing_above: small, spacing_below: small, height: '600', visible: false,
+    properties: {spacing_above: small, spacing_below: small, height: '600', visible: true,
       tooltip: '', interactive: true}
     name: plot_1
     layout_properties: {grid_position: 'LSDZFT,UVTSCZ'}
     event_bindings: {}
   - type: Plot
-    properties: {spacing_above: small, spacing_below: small, height: '600', visible: false,
+    properties: {}
+    name: plot_5
+    layout_properties: {grid_position: 'YTREKA,OHSQPP'}
+  - type: Plot
+    properties: {spacing_above: small, spacing_below: small, height: '600', visible: true,
       tooltip: '', interactive: true}
     name: plot_2
     layout_properties: {grid_position: 'DNSKBA,YZESWF'}
@@ -39,9 +43,10 @@ components:
       tooltip: '', interactive: true}
     name: plot_3
     layout_properties: {grid_position: 'WSYCPI,ACITTJ'}
-    event_bindings: {show: call_js}
+    event_bindings: {}
   - type: Plot
-    properties: {}
+    properties: {spacing_above: small, spacing_below: small, height: 450, visible: false,
+      tooltip: '', interactive: true}
     name: plot_4
     layout_properties: {grid_position: 'POKHJZ,UJYXJE'}
 - type: FlowPanel
