--- a/client_code/Reporting/form_template.yaml
+++ b/client_code/Reporting/form_template.yaml
@@ -30,10 +30,6 @@ components:
     layout_properties: {grid_position: 'LSDZFT,UVTSCZ'}
     event_bindings: {}
   - type: Plot
-    properties: {}
-    name: plot_5
-    layout_properties: {grid_position: 'YTREKA,OHSQPP'}
-  - type: Plot
     properties: {spacing_above: small, spacing_below: small, height: '600', visible: true,
       tooltip: '', interactive: true}
     name: plot_2
@@ -49,6 +45,10 @@ components:
       tooltip: '', interactive: true}
     name: plot_4
     layout_properties: {grid_position: 'POKHJZ,UJYXJE'}
+  - type: Plot
+    properties: {}
+    name: plot_5
+    layout_properties: {grid_position: 'AFHQVE,AVEMUC'}
 - type: FlowPanel
   properties: {role: null, spacing: none, align: center, tooltip: '', border: '',
     foreground: '', visible: true, spacing_above: none, spacing_below: none, background: ''}
