--- a/client_code/Reporting/form_template.yaml
+++ b/client_code/Reporting/form_template.yaml
@@ -26,56 +26,90 @@ components:
   - type: Spacer
     properties: {height: 19}
     name: spacer_1
-    layout_properties: {grid_position: 'FGMKFE,PDEBYO'}
+    layout_properties: {grid_position: 'AFDJCH,TYTKYH'}
   - type: ColumnPanel
-    properties: {role: outlined-card, col_widths: '{}'}
+    properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: outlined_card_8
+    layout_properties: {grid_position: 'EOBNLM,WXAABP'}
+    components:
+    - type: Plot
+      properties: {spacing_above: small, spacing_below: small, height: '450', visible: true,
+        tooltip: '', interactive: true}
+      name: plot_6
+      layout_properties: {grid_position: 'VKTOCK,GBJLHW'}
+  - type: ColumnPanel
+    properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: outlined_card_9
+    layout_properties: {grid_position: 'EOBNLM,FSKFFN'}
+    components:
+    - type: Plot
+      properties: {spacing_above: small, spacing_below: small, height: '100', visible: true,
+        tooltip: '', interactive: true}
+      name: plot_7
+      layout_properties: {grid_position: 'KVUBRJ,DGPJOR'}
+  - type: ColumnPanel
+    properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
     name: outlined_card_3
     layout_properties: {grid_position: 'GKHMKJ,HTZRYS'}
     components:
     - type: Plot
-      properties: {spacing_above: small, spacing_below: small, height: '600', visible: true,
+      properties: {spacing_above: small, spacing_below: small, height: '400', visible: true,
         tooltip: '', interactive: false}
       name: plot_1
       layout_properties: {grid_position: 'TVXWGP,UOLCYQ'}
       event_bindings: {}
   - type: ColumnPanel
-    properties: {role: outlined-card, col_widths: '{}'}
+    properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
     name: outlined_card_4
     layout_properties: {grid_position: 'RJBAIX,BCQRXH'}
     components:
     - type: Plot
-      properties: {spacing_above: small, spacing_below: small, height: '600', visible: true,
+      properties: {spacing_above: small, spacing_below: small, height: '400', visible: true,
         tooltip: '', interactive: false}
       name: plot_2
       layout_properties: {grid_position: 'SERRWL,SCAPHT'}
   - type: ColumnPanel
-    properties: {role: outlined-card, col_widths: '{}'}
+    properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
     name: outlined_card_5
     layout_properties: {grid_position: 'BUWDLH,MHUOWA'}
     components:
     - type: Plot
-      properties: {spacing_above: small, spacing_below: small, height: '600', visible: true,
+      properties: {spacing_above: small, spacing_below: small, height: '400', visible: true,
         tooltip: '', interactive: true}
       name: plot_3
       layout_properties: {grid_position: 'XSTRYG,UZSSGN'}
       event_bindings: {}
   - type: ColumnPanel
-    properties: {role: outlined-card, col_widths: '{}'}
+    properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
     name: outlined_card_6
     layout_properties: {grid_position: 'XXBVKQ,BZYWDO'}
     components:
     - type: Plot
-      properties: {spacing_above: small, spacing_below: small, height: 450, visible: false,
+      properties: {spacing_above: small, spacing_below: small, height: '400', visible: false,
         tooltip: '', interactive: false}
       name: plot_4
       layout_properties: {grid_position: 'HNSWSI,JRXDXA'}
   - type: ColumnPanel
-    properties: {role: outlined-card, col_widths: '{}'}
+    properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
     name: outlined_card_7
     layout_properties: {grid_position: 'ZEKOPO,SHISOL'}
     components:
     - type: Plot
-      properties: {spacing_above: small, spacing_below: small, height: 450, visible: true,
+      properties: {spacing_above: small, spacing_below: small, height: '400', visible: true,
         tooltip: '', interactive: false}
       name: plot_5
       layout_properties: {grid_position: 'FCPCNZ,PAZWRW'}
